Add default aws API filter based on common standards